@@ -6,6 +6,7 @@ python-apt (0.6.20) unstable; urgency=low
     - tightend dependency (closes: #383478)
   * apt/progress.py:
     - use os._exit() in the child (lp: #53298)
+    - use select() when checking for statusfd (lp: #53282)
 
  --
 
